# keep-base-models-claude

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md  writingprompts_samples.json
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_claude_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_search_results/: alignment_tax_RLHF_mode_collapse_diversity_style_creativity_base_model_capabilit_20260323_180132.jsonl  model_alignment_interpolation_distribution_preservation_language_model_20260323_175926.jsonl  model_merging_interpolation_aligned_base_language_model_SLERP_TIES_20260323_180107.jsonl  style_transfer_impersonation_creative_writing_language_model_fine-tuning_persona_20260323_180256.jsonl
papers/: README.md
papers/pages/ji2024_resist_alignment/: ji2024_resist_alignment_manifest.txt
results/: config.json
results/evaluations/: additional_analysis.json  all_metrics.json  statistical_tests.json  summary_stats.json
results/generations/: all_generations.json
src/: additional_analysis.py  analyze.py  config.py  evaluate.py  generate.py  run_experiment.py
(+6 files in other folders)
